# Blokus

./: .gitignore  README.md  tableau de bord.md
blokusppf2024/: blokusppf2024.opam  dune-project
blokusppf2024/assets/: pieces.json
blokusppf2024/lib/: Game.ml  Game.mli  dune
blokusppf2024/lib/controller/: dune  game_controller.ml
blokusppf2024/lib/model/AI/: AI.ml  dune
blokusppf2024/lib/model/board/: board.ml  dune
blokusppf2024/lib/model/game_state/: dune  game_state.ml  game_state.mli
blokusppf2024/lib/model/piece/: dune  piece.ml  piece.mli
blokusppf2024/lib/model/play/: Play.ml  dune
blokusppf2024/lib/model/player/: dune  player.ml  player.mli
blokusppf2024/lib/utils/: dune  utils.ml
blokusppf2024/lib/view/: dune  terminal_view.ml
blokusppf2024/test/: dune  testBoard.ml  testGame_controller.ml  testPiece.ml  testPlayer.ml  testUtils.ml
documentation/_doc/_html/: index.html
documentation/_doc/_html/_odoc_support/: katex.min.js
documentation/_doc/_html/blokusppf2024/: index.html
documentation/_doc/_html/blokusppf2024/Board/: index.html
documentation/_doc/_html/blokusppf2024/Game/: index.html
documentation/_doc/_html/blokusppf2024/Game_controller/: index.html
documentation/_doc/_html/blokusppf2024/Game_state/: index.html
documentation/_doc/_html/blokusppf2024/Piece/: index.html
documentation/_doc/_mlds/blokusppf2024/: index.mld
documentation/_doc/_odocls/blokusppf2024/: board.odocl  game.odocl  game_controller.odocl  game_state.odocl  page-index.odocl  piece.odocl  player.odocl  utils.odocl  view.odocl
(+14 files in other folders)
