(lang dune 2.9)

(name blokusppf2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name blokusppf2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
 ocaml dune
  ANSITerminal 
  yojson 
  qcheck 
  ppx_inline_test
  bisect_ppx)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
